fixed centering issue on smaller screen

--- a/src/StyleSheets/Note.css
+++ b/src/StyleSheets/Note.css
@@ -1,6 +1,6 @@
 .individual-note {
   margin-top: 100px;
-  width: 350px;
+  width: 300px;
   min-height: 380px;
   margin-bottom: 5%;
   margin-right: 25px;
@@ -16,7 +16,7 @@
   text-align: center;
   /* background: #b6d4e1; */
   /* box-shadow: 0 0 4px 4px white; */
-  width: 350px;
+  width: 300px;
   padding: 0 30px;
   box-sizing: border-box;
   height: 30px;
@@ -30,7 +30,7 @@
   font-size: 13px;
   height: 30px;
   line-height: 30px;
-  width: 350px;
+  width: 300px;
   padding: 0 30px;
   box-sizing: border-box;
   border-width: 1px;
@@ -43,7 +43,7 @@
   font-size: 13px;
   height: 30px;
   line-height: 30px;
-  width: 350px;
+  width: 300px;
   text-align: center;
   box-sizing: border-box;
   padding: 0 30px;
@@ -54,7 +54,7 @@
   /* border-style: solid; */
   border-width: 1px;
   font-size: 13px;
-  width: 350px;
+  width: 300px;
   background: #b6d4e1;
   box-shadow: 0 0 3px 3px white;
   height: 228px;
@@ -77,7 +77,7 @@
   box-shadow: 0 0 3px 3px white;
 }
 div.button {
-  max-width: 350px;
+  max-width: 300px;
   margin-top: 5px;
   display: flex;
   justify-content: space-between;
