--- a/src/StyleSheets/UserPage.css
+++ b/src/StyleSheets/UserPage.css
@@ -33,7 +33,6 @@
   width: 100%;
   border-bottom-style: solid;
   height: 37px;
-  position: relative;
   background-color: #5f89b0;
 }
 .logOut {
